--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>简历生成器</title>
+    <title>mack的简历</title>
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
@@ -31,11 +31,11 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">姓名</label><span class="label-value">XXX</span></li>
+                        <label class="left-label">姓名</label><span class="label-value">mack</span></li>
                     <li>
                         <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li>
-                        <label class="left-label">毕业院校</label><span class="label-value">北京邮电大学</span></li>
+                        <label class="left-label">毕业院校</label><span class="label-value">电子科技大学</span></li>
                     <li>
                         <label class="left-label">毕业年份</label><span class="label-value">2017</span></li>
                 </ul>
