--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">手机</label><span class="label-value">182XXXXXXXX</span></li>
+                        <label class="left-label">手机</label><span class="label-value">13266756907</span></li>
                     <li>
-                        <label class="left-label">邮箱</label><span class="label-value">crmrc2014@gmail.com</span></li>
+                        <label class="left-label">邮箱</label><span class="label-value">mackyu91@gmail.com</span></li>
                     <li>
                         <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
                     <li>
